--- a/My_portfolioweb/My_portfolioweb/Index.html
+++ b/My_portfolioweb/My_portfolioweb/Index.html
@@ -230,7 +230,7 @@
 
 
   
-  <section  class="container">
+  <!-- <section  class="container">
         <div class="card">
             <div class="box">
                 <div class="glass"></div>
@@ -261,7 +261,60 @@
             </div>
         </div>
     </div>
-  </section>
+  </section> -->
+
+
+
+  <!-- contact section -->
+
+    <section class="contact" id="contact"><div>
+        <h2 class="heading">Contact <span>Me</span></h2>
+        <form action="">
+            <div class="input-group">
+                <div class="input-box">
+                    <input type="text" placeholder="Full Name">
+                <input type="text" placeholder=" full-Name">
+                <input type="email" placeholder="Email"></div>
+            <div class="inputBox">
+                <input type="text" placeholder ="Name">
+                <input type="email" placeholder="Email">
+            </div>
+            <div class="inputBox">
+                <input type="number" placeholder="Phone Number">
+                <input type="text" placeholder="Subject">
+            </div>
+
+            <div class="input-grop-2">
+                <textareaname="" id="" cols="30" rows="10"
+                 placeholder=" Your Message"></textarea>
+            </div>
+            <input type="submit" value="Send Message" class="btn">
+        </form>
+    </section>
+
+
+    <footer class="footer">
+        <div class="social">
+            <a href="#"><i class='bx bxl-linkedin'></i></a>
+            <a href="#"><i class='bx bxl-github'></i></a>
+            <a href="#"><i class='bx bxl-instagram-alt'></i></a>
+            <a href="#"><i class='bx bxl-twitter'></i></a>
+        </div>
+        <ul class="list"><li>
+            <a href="#">FAQ</a><li>
+            <a href="#">Services </a> <li>
+            <a href="#">About Me </a> <li>
+            <a href="#">Contact</a> <li>
+            <a href="#">Testimonials</a> <li>
+            <a href="#">Portfolio</a> <li>          
+        </ul>
+        <p class="copyright">
+            &copy; 2021 Vaishno Tiwari. All Rights Reserved
+        </p>
+    </footer>
+
+    
+
 
     </body>
     <script src="script.js"></script>
